--- a/src/content/posts/welcome.mdx
+++ b/src/content/posts/welcome.mdx
@@ -1,6 +1,6 @@
 ---
 title: "My Journey into the Mathematical Abyss"
-publishedDate: 2023-06-05
+pubDate: 2023-06-05
 description: "The chronicles of this blog."
 author: "Truls Henrik Jakobsen"
 tags: ["learning", "mathematics"]
