--- a/src/content/posts/welcome.mdx
+++ b/src/content/posts/welcome.mdx
@@ -1,5 +1,5 @@
 ---
-title: "My Journey into the Mathematical Abyss"
+title: "My self-studying Journey into Mathematics"
 pubDate: 2023-06-05
 description: "The chronicles of this blog."
 author: "Truls Henrik Jakobsen"
@@ -9,16 +9,16 @@ draft: false
 
 ## Hello everyone!
 
-Welcome to my own corner of the digital universe! My name is Truls Henrik,
+Welcome to my tiny corner of the digital universe! My name is Truls Henrik,
 a 23-year-old software engineer hailing from the frost-kissed landscapes of Norway with an appetite for mathematics.
 
 I've often found myself grappling with mathematical concepts,
 staring down the barrel of what appeared to be an impenetrable fortress of numbers and symbols.
 It's a tale as old as time: you learn math in school,
-think you've left it behind, and then BAM - it rears its geometric head when you least expect it.
+think you've left it behind, and then BAM - it rears its head when you least expect it.
 
 But that's where the journey gets interesting.
-A few months ago, I took a hard look at my mathematical abilities and realized there were huge holes where there should have been knowledge.
+A few months ago, I took a hard look at my mathematical abilities and realized there were some huge holes where there should have been knowledge.
 So, I did what any rational person would do: I set out on an epic quest to teach myself math.
 
 From filling in the holes in my basic understanding of the fundamentals to diving headfirst into the deep end of complex equations,
@@ -29,7 +29,6 @@ This blog is a chronicle of that journey and a celebration of the joy of learnin
 My aim is not to intimidate you with esoteric mathematical concepts and dazzle you with how smart I am,
 but to instill a sense of wonder, curiosity, and even joy in exploring math.
 I am a firm believer that math can be understood and appreciated by anyone,
-I firmly believe that anyone can learn and appreciate math,
 provided we shift our perspective and approach it with a touch of creativity and some humour.
 If you're wondering how that looks, stick around and you'll find out!
 
