Wrong post oops

--- a/src/content/posts/understanding-the-why.mdx
+++ b/src/content/posts/understanding-the-why.mdx
@@ -4,7 +4,7 @@ pubDate: 2023-06-10
 description: "Instead of focusing on the what we can think about why"
 author: "Truls Henrik Jakobsen"
 tags: ["learning", "mathematics", "trigonometry"]
-draft: false
+draft: true
 ---
 
 **Introduction**
